@@ -166,19 +166,13 @@ ul.menu-depth-1 {
     opacity: 0;
 }
 
-/*.menu-item-depth-0:hover {*/
-/*background-color: #00688B;*/
-/*}*/
-
 .menu-item-depth-0:hover ul.menu-depth-1 {
     left: 0px;
     opacity: 1;
     z-index: 1;
-    width: 200px;
-    padding-left: 5px;
     color: white;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    white-space: nowrap;
+    padding: 10px;
 }
 
 .menu-item-depth-0:hover ul.menu-depth-1 li {
